# Multi-Agent-AI-Research-Analyst

./: .gitignore  Intro  README.md  config.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  critic.py  planner.py  reader.py  searcher.py  synthesizer.py  writer.py
app/: __init__.py  main.py
core/: __init__.py  logger.py
data/: __init__.py
eval/: __init__.py
llm/: __init__.py  client.py  gemini_client.py  groq_client.py
memory/: __init__.py  redis_store.py
models/: __init__.py  agent_response.py  citation.py  critique.py  fact.py  research_plan.py  research_state.py  search_result.py
orchestrator/: __init__.py  graph.py  state.py
tests/: __init__.py  test_graph_e2e.py  test_human_checkpoint.py  test_memory_across_runs.py  test_planner_manual.py  test_reader_manual.py  test_searcher_manual.py  test_send_api.py  test_synthesizer_manual.py  test_v1_send_isolation.py  test_v2_retry_parallel.py  test_v3_debate_cap.py  test_web_search_manual.py  test_writer_manual.py
tools/: __init__.py  eval_harness.py  replay_revision.py  run_demo.py  trace_summary.py  web_search.py
