[project]
name = "multi-agent-ai-research-analyst"
version = "0.1.0"
description = "Autonomous AI Research Analyst"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "groq>=0.9",
    "google-genai==2.10.0",
    "redis>=5.0",
    "ddgs==9.14.4",
    "scholarly>=1.7",
    "playwright>=1.44",
    "PyMuPDF>=1.24",
    "unstructured>=0.14",
    "numba>=0.57",
    "llvmlite>=0.40",
    "arxiv>=2.1",
    "ragas>=0.1",
    "langfuse>=2.0",
    "streamlit>=1.35",
]
